--- a/META.yml
+++ b/META.yml
@@ -5,6 +5,7 @@ author:
 build_requires:
   ExtUtils::MakeMaker: 6.42
   Test::More: 0
+  Test::use::ok: 0
 configure_requires:
   ExtUtils::Depends: 0.302
   ExtUtils::MakeMaker: 6.42
@@ -25,4 +26,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/nothingmuch/magical-hooker-decorate.git
-version: 0.01
+version: 0.02
